UIUX-699: fix email input clipping

--- a/sugarcrm/styleguide/less/clients/base/components/record.less
+++ b/sugarcrm/styleguide/less/clients/base/components/record.less
@@ -271,13 +271,15 @@
       }
       .compose-sender-options {
         position: absolute;
-        top: 7px;
-        right: 51px;
+        top: 3px;
+        right: 45px;
         z-index: 2;
+        background-color: #FFF;
+        padding: 5px 4px 5px;
       }
       //for email compose
-      input[name="to_addresses"] {
-        padding-right: 115px;
+      input[name="to_addresses"] {`
+        //padding-right: 115px;
       }
       .help-block {
         min-height: 8px;
@@ -629,7 +631,7 @@
 
 }
 
-// labels on left side 
+// labels on left side
 .record {
   .card2 {
     .normal {
@@ -660,11 +662,11 @@
 
     .record-cell .select2-container {
       margin-left: -9px !important;
-      margin-top: -1px !important;      
+      margin-top: -1px !important;
     }
 
     .record-cell input.input-large {
-      margin-top: -1px !important;      
+      margin-top: -1px !important;
     }
 
     .record-cell .address.edit {
